--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build",
+    "build": "webpack -p && webpack-dev-server",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
